--- a/all-builds-view-server/pom.xml
+++ b/all-builds-view-server/pom.xml
@@ -25,5 +25,16 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-runtime</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-compat-tomcat</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 </project>
