--- a/all-builds-view-server/pom.xml
+++ b/all-builds-view-server/pom.xml
@@ -33,6 +33,12 @@
 
         <dependency>
             <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-compat-tomcat7</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-compat-tomcat</artifactId>
             <version>2.0.1</version>
         </dependency>
