--- a/all-builds-view-server/pom.xml
+++ b/all-builds-view-server/pom.xml
@@ -28,19 +28,8 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-runtime</artifactId>
-            <version>2.1.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.atmosphere</groupId>
-            <artifactId>atmosphere-compat-tomcat7</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.atmosphere</groupId>
-            <artifactId>atmosphere-compat-tomcat</artifactId>
-            <version>2.0.1</version>
+            <version>2.2.4</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
